--- a/.circleci/images/primary/Dockerfile-2.4.10
+++ b/.circleci/images/primary/Dockerfile-2.4.10
@@ -51,8 +51,8 @@ RUN curl -sfL $(curl -s https://api.github.com/repos/powerman/dockerize/releases
 RUN mkdir -p "$GEM_HOME" && chmod -R 777 "$GEM_HOME"
 
 # Install RubyGems and Bundler
-RUN gem update --system
-RUN gem install bundler
+RUN gem update --system 3.3.26
+RUN gem install bundler -v '~> 2.3.26'
 ENV BUNDLE_SILENCE_ROOT_WARNING 1
 
 RUN mkdir /app
