--- a/.circleci/images/primary/Dockerfile-2.6.10
+++ b/.circleci/images/primary/Dockerfile-2.6.10
@@ -45,7 +45,7 @@ RUN COMPOSE_URL="https://github.com/linuxserver/docker-docker-compose/releases/d
   && docker-compose version
 
 # Install Dockerize
-RUN curl -sfL $(curl -s https://api.github.com/repos/powerman/dockerize/releases/latest | grep -i /dockerize-$(uname -s)-$(dpkg --print-architecture)\" | cut -d\" -f4) | install /dev/stdin /usr/local/bin/dockerize
+RUN curl -sfL $(curl -s https://api.github.com/repos/powerman/dockerize/releases/latest | grep -i /dockerize-$(uname -s)-$(dpkg --print-architecture)\" | cut -d\" -f4) | install /dev/stdin /usr/local/bin/dockerize; dockerize --version
 
 # Install RubyGems
 RUN mkdir -p "$GEM_HOME" && chmod -R 777 "$GEM_HOME"
