Ignore vendor/bundle for rubocop
Depending on one's setup, vendor/bundle may be used to install gems per
project. Rubocop looks into this for additional `.rubocop.yml`, which is
not going to work.

See https://github.com/rubocop/rubocop/issues/9832

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,7 @@ AllCops:
     - 'integration/apps/hanami/Rakefile'
     - 'lib/datadog/profiling/pprof/pprof_pb.rb'
     - 'spec/**/**/interesting_backtrace_helper.rb' # This file needs quite a few bizarre code patterns by design
+    - 'vendor/bundle/**/*'
   NewCops: disable # Don't allow new cops to be enabled implicitly.
 
 Layout/LineLength:
