--- a/.circleci/images/primary/Dockerfile-truffleruby-22.3.0
+++ b/.circleci/images/primary/Dockerfile-truffleruby-22.3.0
@@ -57,12 +57,11 @@ RUN DOCKERIZE_URL="https://github.com/powerman/dockerize/releases/download/v0.17
 ENV GEM_HOME="/usr/local/bundle"
 
 # Install RubyGems
-RUN gem update --system
 RUN mkdir -p "$GEM_HOME" && chmod -R 777 "$GEM_HOME"
 
 # Upgrade RubyGems and Bundler
-RUN gem update --system
-RUN gem install bundler
+RUN gem update --system 3.3.26
+RUN gem install bundler -v '~> 2.3.26'
 ENV BUNDLE_SILENCE_ROOT_WARNING 1
 
 RUN mkdir -p /app
