Remove BUNDLE_PATH env var
This variable causes bundle to install gems not in GEM_HOME
(/usr/local/bundle) but in /usr/local/bundle/<engine>/<version>, which
is inconsistent with gem install and causes issues such as double gem
installation and stateful gem lookup failures depending on whether
bundle install has been run or not.

--- a/.circleci/images/primary/Dockerfile-jruby-9.2.8.0
+++ b/.circleci/images/primary/Dockerfile-jruby-9.2.8.0
@@ -37,8 +37,7 @@ RUN gem install rake net-telnet xmlrpc
 # install things globally, for great justice
 # and don't create ".bundle" in all our apps
 ENV GEM_HOME /usr/local/bundle
-ENV BUNDLE_PATH="$GEM_HOME" \
-    BUNDLE_BIN="$GEM_HOME/bin" \
+ENV BUNDLE_BIN="$GEM_HOME/bin" \
     BUNDLE_SILENCE_ROOT_WARNING=1 \
     BUNDLE_APP_CONFIG="$GEM_HOME"
 ENV PATH $BUNDLE_BIN:$PATH
