--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -538,11 +538,12 @@ job_configuration:
     image: ghcr.io/datadog/dd-trace-rb/ruby:3.2.0-dd
     resource_class_to_use: medium+
     # ADD NEW RUBIES HERE
-  - &config-jruby-9_2_8_0 # Test with older 9.2 release because 9.2.9.0 changed behavior, see https://github.com/DataDog/dd-trace-rb/pull/1409
-    <<: *filters_all_branches_and_tags
-    ruby_version: 'jruby-9.2.8.0'
-    image: ghcr.io/datadog/dd-trace-rb/jruby:9.2.8.0-dd
-    resource_class_to_use: medium+
+  # TODO: Disabled for possible removal
+  # - &config-jruby-9_2_8_0 # Test with older 9.2 release because 9.2.9.0 changed behavior, see https://github.com/DataDog/dd-trace-rb/pull/1409
+  #   <<: *filters_all_branches_and_tags
+  #   ruby_version: 'jruby-9.2.8.0'
+  #   image: ghcr.io/datadog/dd-trace-rb/jruby:9.2.8.0-dd
+  #   resource_class_to_use: medium+
   - &config-jruby-9_2 # More recent release of 9.2
     <<: *filters_all_branches_and_tags
     ruby_version: 'jruby-9.2.21.0'
@@ -584,7 +585,8 @@ workflows:
             # TODO: Re-enable once 3.2 testing is green!
             #- test-3.2
             # ADD NEW RUBIES HERE
-            - test-jruby-9.2.8.0
+            # TODO: Disabled for possible removal
+            #- test-jruby-9.2.8.0
             - test-jruby-9.2
             - test-jruby-9.3
       - orb/changelog:
@@ -736,14 +738,15 @@ workflows:
       #     requires:
       #       - build-3.2
       # ADD NEW RUBIES HERE
-      - orb/build:
-          <<: *config-jruby-9_2_8_0
-          name: build-jruby-9.2.8.0
-      - orb/test:
-          <<: *config-jruby-9_2_8_0
-          name: test-jruby-9.2.8.0
-          requires:
-            - build-jruby-9.2.8.0
+      # TODO: Disabled for possible removal
+      # - orb/build:
+      #     <<: *config-jruby-9_2_8_0
+      #     name: build-jruby-9.2.8.0
+      # - orb/test:
+      #     <<: *config-jruby-9_2_8_0
+      #     name: test-jruby-9.2.8.0
+      #     requires:
+      #       - build-jruby-9.2.8.0
       - orb/build:
           <<: *config-jruby-9_2
           name: build-jruby-9.2
@@ -778,7 +781,8 @@ workflows:
             # TODO: Re-enable once 3.2 testing is green!
             #- test-3.2
             # ADD NEW RUBIES HERE
-            - test-jruby-9.2.8.0
+            # TODO: Disabled for possible removal
+            # - test-jruby-9.2.8.0
             - test-jruby-9.2
             - test-jruby-9.3
       - "deploy release":
@@ -798,7 +802,8 @@ workflows:
             # TODO: Re-enable once 3.2 testing is green!
             #- test-3.2
             # ADD NEW RUBIES HERE
-            - test-jruby-9.2.8.0
+            # TODO: Disabled for possible removal
+            # - test-jruby-9.2.8.0
             - test-jruby-9.2
             - test-jruby-9.3
   # This workflow runs the same `build` and `test` jobs as above on a schedule.
@@ -962,15 +967,16 @@ workflows:
       #     requires:
       #       - build-3.2
       # ADD NEW RUBIES HERE
-      - orb/build:
-          <<: *config-jruby-9_2_8_0
-          name: build-jruby-9.2.8.0
-          edge: true
-      - orb/test:
-          <<: *config-jruby-9_2_8_0
-          name: test-jruby-9.2.8.0
-          requires:
-            - build-jruby-9.2.8.0
+      # TODO: Disabled for possible removal
+      # - orb/build:
+      #     <<: *config-jruby-9_2_8_0
+      #     name: build-jruby-9.2.8.0
+      #     edge: true
+      # - orb/test:
+      #     <<: *config-jruby-9_2_8_0
+      #     name: test-jruby-9.2.8.0
+      #     requires:
+      #       - build-jruby-9.2.8.0
       - orb/build:
           <<: *config-jruby-9_2
           name: build-jruby-9.2
